# centre_of_gravity

./: .gitignore  README.md  index.html  index_embedded.html  locations_config.json  pyproject.toml  routes.json  runner.py  test_runner.py
.github/workflows/: build-and-release.yml  test_runner.yaml
src/: cli.py  runner.py  test_runner.py
